# FluxCaption

./: .env.ai_providers.example  .env.example  .gitignore  01-首次配置.cmd  02-启动系统.cmd  03-打开系统.cmd  04-查看状态.cmd  05-查看日志.cmd  06-停止系统.cmd  AI_PROVIDERS_INTEGRATION_GUIDE.md  CLAUDE.md  DEPLOYMENT.md  FRONTEND_VALIDATION_REPORT.md  M2_COMPLETION_REPORT.md  M3_COMPLETION_REPORT.md  M4_COMPLETION_REPORT.md  M5_COMPLETION_REPORT.md  M6_COMPLETION_REPORT.md  M7_COMPLETION_REPORT.md  M8_COMPLETION_REPORT.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PROJECT_STATUS.md  QUICKSTART.md  QUOTA_COST_CONTROL.md  README.md  SCRIPTS_README.md  cleanup.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  logs.sh  quick-client.ps1  quick-logs.cmd  quick-open.cmd  quick-setup.cmd  quick-start.cmd  quick-status.cmd  quick-stop.cmd  restart.sh  start.sh  (+1 more)
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  start.ps1  start.sh
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: ai_model_catalog_runtime.py  ai_model_catalog_sync.py  config.py  db.py  db_health.py  events.py  init_ai_providers.py  init_db.py  init_settings.py  logging.py  model_sync.py  runtime_config.py  settings_helper.py
backend/app/models/: __init__.py  ai_model_config.py  ai_provider_config.py  ai_provider_usage.py  auto_translation_rule.py  base.py  correction_rule.py  media_asset.py  model_registry.py  setting.py  setting_change_history.py  subtitle.py  subtitle_sync_record.py  task_log.py  translation_cache.py  translation_job.py  translation_memory.py  types.py  user.py
backend/app/schemas/: __init__.py  ai_models.py  asr.py  auth.py  auto_translation_rule.py  cache.py  correction.py  health.py  jellyfin.py  jobs.py  models.py  settings.py  upload.py
backend/app/services/: ai_quota_service.py  ai_response_cleaner.py  asr_factory.py  asr_service.py  audio_extractor.py  auth_service.py  detector.py  (+17 more)
backend/migrations/: env.py
backend/scripts/: run_migration.py  update_subtitle_stats.py
backend/tests/: conftest.py
(+162 files in other folders)
